Release v1.0.1